# cellshape-cloud

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  chamfer.py  dataset.py  gaussian100.npy  main.py  main_pl.py  model.py  move.py  naming_and_reports.py  pyproject.toml  run.sh  setup.cfg  setup.py  sphere100.npy  style_transfer.py  tearingnet.py  test-Copy1.ipynb  testing_modelnet-Copy1.ipynb  testing_modelnet.ipynb  testing_modelnet_an_tao.ipynb  testing_modelnet_pointnet-Copy1.ipynb  testing_modelnet_pointnet.ipynb  utils.py
.github/workflows/: test_and_deploy.yml
cellshape_cloud/: __init__.py  autoencoder.py  cloud_autoencoder.py  extract.py  extract_features.py  lightning_autoencoder.py  lightning_classifier.py  main.py  pointcloud_dataset.py  reports.py  train_autoencoder.py  training_functions.py  transformations.py  utils.py
cellshape_cloud/_vendor/: decoders.py  encoders.py  graph_functions.py
cellshape_cloud/dataloaders/: pointcloud_dataset.py
cellshape_cloud/helpers/: graph_functions.py  plotting.py  reports.py  training_functions.py
cellshape_cloud/losses/: chamfer_loss.py
cellshape_cloud/models/: dgcnn_foldingnet.py  foldingnet.py
cellshape_cloud/utils/: graph_functions.py  helper_modules.py  training_functions.py
dataloaders/: pointcloud_dataset.py
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
docs/notebooks/: licensing.txt  (+9 more)
losses/: chamfer_loss.py
models/: chamfer_loss.py  dgcnn_foldingnet.py  foldingnet.py  model.py  tearingnet.py
utils/: graph_functions.py  helper_modules.py  training_functions.py
(+6 files in other folders)
