[metadata]
name = cellshape-cloud
version = 0.0.4-rc0
author = Matt DeVries, Adam Tyson
author_email = matthew.devries.13@gmail.com
url = https://github.com/Sentinal4D/cellshape-cloud
description = Cell shape analysis using graph neural networks
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
project_urls =
    Bug Tracker = https://github.com/Sentinal4D/cellshape-cloud/issues
    Documentation = https://github.com/Sentinal4D/cellshape-cloud#README.md
    Source Code = https://github.com/Sentinal4D/cellshape-cloud
    User Support = https://github.com/Sentinal4D/cellshape-cloud/issues

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
install_requires =
    torch
    torchvision
    pyntcloud
    numpy
    matplotlib
    Pillow

[options.packages.find]
where = cellshape_cloud
exclude = test*

[options.extras_require]
dev =
	black
	pytest
	pytest-cov
	bump2version
	pre-commit
	flake8
	coverage

[flake8]
max-line-length = 79
include=cellshape_cloud*
exclude = __init__.py,build,.eggs
